--- a/popup.css
+++ b/popup.css
@@ -55,3 +55,62 @@ ul li {
 ul {
     margin-bottom: 20px;
 }
+
+
+
+
+.suggestionsCount {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    /* padding: 0px 8px; */
+    font-weight: 500;
+    padding-left: 8px;
+}
+
+
+.suggestionsCount input[type="radio"] {
+    display: none;
+}
+
+.suggestionsCount .radio-label {
+    display: inline-block;
+    margin: 5px;
+    cursor: pointer;
+    border-radius: 3px;
+    padding: 10px 15px;
+    color: rgb(98, 95, 95);
+}
+
+.suggestionsCount .radio-label:hover {
+    background-color: #d0caca;
+    background-color: #efeff7;
+}
+
+.suggestionsCount input[type="radio"]:checked+.radio-label {
+    background-color: white;
+    color: #000;
+    background-color: #d8d8de;
+
+}
+
+
+.radios-container {
+    border-radius: 4px;
+    margin-left: 1px;
+    /* border: 1px solid red */
+}
+
+
+.suggestionsCount p {
+    font-size: 15px;
+    color: rgb(65, 63, 63);
+}
+
+
+#clearButton {
+    width: fit-content;
+    margin: 0px 10px;
+    padding: 5px 12px;
+}
