--- a/popup.css
+++ b/popup.css
@@ -1,47 +1,27 @@
 body {
-    width: 300px;
+    width: 340px;
     height: auto;
     margin: 0;
     box-sizing: border-box;
+    padding: 10px 4px;
 }
 
-button {
-    width: 100%;
-    height: 30px;
-    margin: 0;
-    padding: 0;
-    border: 0;
-    border-radius: 4px;
-    background-color: #dfbdbd;
-    color: #000;
-    font-size: 14px;
-    font-weight: bold;
-    cursor: pointer;
-}
 
 h1 {
-    font-size: 20px;
+    font-size: 18px;
     font-weight: bold;
-    padding: 0;
-    margin: 0;
+    margin: 0 0 6px 0;
 }
 
-#headButton {
-    position: sticky;
-    top: 0;
-    padding: 20px 10px;
-    background-color: white;
+#recentMistakes {
+    padding: 10px;
 }
 
-#recentMistakesHeader {
-    position: sticky;
-    top: 72.2px;
-    background-color: white;
-    padding: 4px 10px;
-    padding-bottom: 5px;
-    margin: 0;
+#recentMistakesList {
+    border: 1px solid #d8d8de;
+    max-height: 360px;
+    overflow-y: scroll;
 }
-
 
 ul li {
     list-style: none;
@@ -52,23 +32,12 @@ ul li {
     margin-bottom: 4px;
 }
 
-ul {
-    margin-bottom: 20px;
-}
-
-
-
 
 .suggestionsCount {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    /* padding: 0px 8px; */
     font-weight: 500;
     padding-left: 8px;
 }
-
 
 .suggestionsCount input[type="radio"] {
     display: none;
@@ -89,28 +58,55 @@ ul {
 }
 
 .suggestionsCount input[type="radio"]:checked+.radio-label {
-    background-color: white;
     color: #000;
     background-color: #d8d8de;
-
 }
-
-
-.radios-container {
-    border-radius: 4px;
-    margin-left: 1px;
-    /* border: 1px solid red */
-}
-
 
 .suggestionsCount p {
     font-size: 15px;
     color: rgb(65, 63, 63);
 }
 
+.radios-container {
+    border-radius: 4px;
+    margin-left: 1px;
+}
 
-#clearButton {
-    width: fit-content;
+
+#buttonsContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+}
+
+button {
+    width: 100%;
+    height: 30px;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    border-radius: 4px;
+    background-color: #dfbdbd;
+    color: #000;
+    font-size: 14px;
+    font-weight: bold;
+    cursor: pointer;
+    border: 1px solid #d8d8de;
+}
+
+button:hover {
+    border: 1px solid rgb(107, 101, 101);
+}
+
+#clearButton,
+#downloadButton {
     margin: 0px 10px;
     padding: 5px 12px;
+
+}
+
+#emptyContainer {
+    padding: 40px 10px;
+    text-align: center;
 }
